kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: strawberry
  namespace: strawberry
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: strawberry
